--- a/pages/index.html
+++ b/pages/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>HOME PAGE</h1>
+    <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/contact-me.html">Contact Me</a></li>
+      </ul>
 </body>
 </html>
