--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>CONTACT ME</h1>
+    <ul>
+        <li><a href="/">Home Page</a></li>
+        <li><a href="./about.html">ABOUT ME</a></li>
+    </ul>
 </body>
 </html>
