--- a/pages/about.html
+++ b/pages/about.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>About Page</h1>
+    <ul>
+        <li><a href="/">Home Page</a></li>
+        <li><a href="./contact-me.html">CONTACT ME</a></li>
+    </ul>
 </body>
 </html>
